new entry in main menu: "Tools" - "File Manager"(nautilus)

--- a/README.org
+++ b/README.org
@@ -28,3 +28,5 @@ The following package names are the names in [[https://www.archlinux.org/][Arch 
 - fcitx5
 - fcitx5-config-qt
 - font-manager
+- nautilus
+- breeze, breeze-gtk
