feat: add several new apps to menu
These new apps are:
- wps-office
- pycharm-community-edition
- deepin-wine-tim
- steam

And add a missing entry to README file:
- deepin-wine-wechat

Add a new menu:
- Social

--- a/README.org
+++ b/README.org
@@ -33,3 +33,8 @@ The following package names are the names in [[https://www.archlinux.org/][Arch 
 - zathura
 - baidunetdisk-bin
 - nextcloud
+- wps-office
+- pycharm-community-edition
+- deepin-wine-tim
+- deepin-wine-wechat
+- steam
