menu: add uget (a file downloader)

--- a/README.org
+++ b/README.org
@@ -38,3 +38,4 @@ The following package names are the names in [[https://www.archlinux.org/][Arch 
 - deepin-wine-tim
 - deepin-wine-wechat
 - steam
+- uget
